<resources>
    <string name="app_name">GitHubRR Pro Max</string>

    <string name="search">Search</string>
    <string name="search_hint">Enter Username</string>
    <string name="search_info">Showing %d results for query %s</string>
    <string name="no_result">No Result</string>

    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="repositories">Repositories</string>
    <string name="no_item">No Item</string>

    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="company">Company</string>

    <string name="username_item_string">\@%s</string>
    <string name="id_item_string">ID : %d</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="settings_dark_mode_key">dark_mode</string>
    <string name="settings_dark_mode_title">Dark Mode</string>
</resources>