<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserDetailInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/root_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fragment_user_detail_info_civ_avatar"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_civ_avatar"
                tools:text="Nama User" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_repositories_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/repositories"
                android:textAlignment="center"
                android:textSize="17.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/fragment_user_detail_info_tv_followers_title"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@id/fragment_user_detail_info_tv_name"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_tv_name" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_followers_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textSize="17.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/fragment_user_detail_info_tv_followings_title"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/fragment_user_detail_info_tv_repositories_title"
                app:layout_constraintTop_toTopOf="@id/fragment_user_detail_info_tv_repositories_title" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_followings_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/followings"
                android:textAlignment="center"
                android:textSize="17.5sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/fragment_user_detail_info_tv_name"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/fragment_user_detail_info_tv_followers_title"
                app:layout_constraintTop_toTopOf="@id/fragment_user_detail_info_tv_repositories_title" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_repositories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/fragment_user_detail_info_tv_repositories_title"
                app:layout_constraintStart_toStartOf="@id/fragment_user_detail_info_tv_repositories_title"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_tv_repositories_title"
                tools:text="100" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/fragment_user_detail_info_tv_followers_title"
                app:layout_constraintStart_toStartOf="@id/fragment_user_detail_info_tv_followers_title"
                app:layout_constraintTop_toTopOf="@id/fragment_user_detail_info_tv_repositories"
                tools:text="100" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_followings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/fragment_user_detail_info_tv_followings_title"
                app:layout_constraintStart_toStartOf="@id/fragment_user_detail_info_tv_followings_title"
                app:layout_constraintTop_toTopOf="@id/fragment_user_detail_info_tv_repositories"
                tools:text="100" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/fragment_user_detail_info_barrier1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="fragment_user_detail_info_tv_repositories, fragment_user_detail_info_tv_followers, fragment_user_detail_info_tv_followings" />

            <ImageView
                android:id="@+id/fragment_user_detail_info_iv_email"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="7.5dp"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_baseline_email_24"
                app:layout_constraintBottom_toTopOf="@id/fragment_user_detail_info_barrier2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_barrier1"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7.5dp"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/fragment_user_detail_info_barrier2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_user_detail_info_iv_email"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_barrier1"
                tools:text="email@example.com" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/fragment_user_detail_info_barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="fragment_user_detail_info_iv_email, fragment_user_detail_info_tv_email" />

            <ImageView
                android:id="@+id/fragment_user_detail_info_iv_location"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="7.5dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintBottom_toTopOf="@id/fragment_user_detail_info_barrier3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_barrier2"
                app:tint="@color/orange"
                android:contentDescription="@string/location" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7.5dp"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/fragment_user_detail_info_barrier3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_user_detail_info_iv_location"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_barrier2"
                tools:text="Location" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/fragment_user_detail_info_barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="fragment_user_detail_info_iv_location, fragment_user_detail_info_tv_location" />

            <ImageView
                android:id="@+id/fragment_user_detail_info_iv_company"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="7.5dp"
                android:src="@drawable/ic_baseline_corporate_fare_24"
                app:layout_constraintBottom_toTopOf="@id/fragment_user_detail_info_barrier4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_barrier3"
                app:tint="@color/orange"
                android:contentDescription="@string/company" />

            <TextView
                android:id="@+id/fragment_user_detail_info_tv_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="7.5dp"
                android:layout_marginStart="15dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/fragment_user_detail_info_barrier4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_user_detail_info_iv_company"
                app:layout_constraintTop_toBottomOf="@id/fragment_user_detail_info_barrier3"
                tools:text="Company" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/fragment_user_detail_info_barrier4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="fragment_user_detail_info_iv_company, fragment_user_detail_info_tv_company" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/fragment_user_detail_info_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>